Allow operations to include their source as class metadata
Allows GEGL applications to show the code, so users can
study them or create new operations based on them easily.

--- a/operations/Makefile-common.am
+++ b/operations/Makefile-common.am
@@ -31,3 +31,6 @@ AM_CFLAGS = $(DEP_CFLAGS) $(BABL_CFLAGS)
 AM_LDFLAGS = -avoid-version -export-dynamic -module $(no_undefined)
 
 ext_dir = $(libdir)/gegl-@GEGL_API_VERSION@
+
+%.c.h: %.c $(top_builddir)/tools/csourcetostring.py
+	$(PYTHON) $(top_builddir)/tools/csourcetostring.py $<
