--- a/operations/external/Makefile.am
+++ b/operations/external/Makefile.am
@@ -158,5 +158,7 @@ rgbe_save_la_SOURCES = rgbe-save.c
 rgbe_save_la_CFLAGS = $(AM_CFLAGS) -I $(top_srcdir)/libs
 rgbe_save_la_LIBADD = $(op_libs) $(top_builddir)/libs/rgbe/librgbe.la
 
+BUILT_SOURCES = $(subst .c,.c.h,$(wildcard $(srcdir)/*.c))
+
 opdir = $(libdir)/gegl-@GEGL_API_VERSION@
 op_LTLIBRARIES = $(ops)
