--- a/operations/core/Makefile.am
+++ b/operations/core/Makefile.am
@@ -1,6 +1,7 @@
 include $(top_srcdir)/operations/Makefile-common.am
 
 EXTRA_DIST = $(wildcard $(srcdir)/*.h)
+BUILT_SOURCES = $(subst .c,.c.h,$(wildcard $(srcdir)/*.c))
 
 AM_CPPFLAGS += -I$(srcdir)
 
