--- a/operations/workshop/Makefile.am
+++ b/operations/workshop/Makefile.am
@@ -4,6 +4,8 @@ include $(top_srcdir)/operations/Makefile-common.am
 
 EXTRA_DIST = $(wildcard $(srcdir)/*.h)
 
+BUILT_SOURCES = $(subst .c,.c.h,$(wildcard $(srcdir)/*.c))
+
 AM_CPPFLAGS += -I$(srcdir)
 
 LIBS = $(op_libs)
