png-load: Add back code for reading from stdin
Was temporarily missing after GIO refactor. Can now read stdin
again, but the functionality is broken: get_bounding_box()
eats some of PNG files, so process() sees an incomplete file.
This bug was there before also.
Includes an implementation for WIN32, but I have no idea if it compiles.

--- a/configure.ac
+++ b/configure.ac
@@ -494,6 +494,16 @@ AC_CHECK_FUNCS(fsync)
 PKG_CHECK_MODULES(BABL, babl >= babl_required_version)
 
 GLIB_PACKAGES="gobject-2.0 gmodule-2.0 gio-2.0"
+# select platform-specific GIO
+case "$os_win32" in
+  yes)
+    GLIB_PACKAGES+=" gio-windows-2.0"
+    ;;
+  *)
+    GLIB_PACKAGES+=" gio-unix-2.0"
+    ;;
+esac
+
 AC_SUBST(GLIB_PACKAGES)
 
 dnl This PATH_GLIB is somewhat redundant, but does a sanity compile and 
