png-load: Move function for opening stream to library
In order to be able to reuse it in the other file loaders,
like gegl:jpg-load.
In private header for now.

--- a/gegl/Makefile.am
+++ b/gegl/Makefile.am
@@ -94,6 +94,7 @@ GEGL_sources = \
 	gegl-utils.c			\
 	gegl-lookup.c			\
 	gegl-xml.c			\
+	gegl-gio.c			\
 	gegl-random.c			\
 	gegl-matrix.c			\
 	\
@@ -114,6 +115,7 @@ GEGL_sources = \
 	gegl-op.h			    \
 	gegl-plugin.h			\
 	gegl-random-private.h		\
+	gegl-gio-private.h		\
 	gegl-types-internal.h		\
 	gegl-xml.h
 
