operations: add gegl:video-degradation

--- a/operations/common/Makefile.am
+++ b/operations/common/Makefile.am
@@ -120,6 +120,7 @@ op_LTLIBRARIES = \
 	tile-glass.la \
 	unsharp-mask.la \
 	value-invert.la \
+	video-degradation.la \
 	vignette.la \
 	warp.la \
 	waves.la \
