--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -103,6 +103,7 @@ operations/common/softglow.c
 operations/common/stress.c
 operations/common/stretch-contrast.c
 operations/common/stretch-contrast-hsv.c
+operations/common/supernova.c
 operations/common/svg-huerotate.c
 operations/common/svg-luminancetoalpha.c
 operations/common/svg-matrix.c
