Bug 740454 - Port the gimp Sinus plug-in as gegl:sinus

--- a/tests/compositions/Makefile.am
+++ b/tests/compositions/Makefile.am
@@ -45,6 +45,7 @@ TESTS = \
   rgb-params.xml                  \
   rotate.xml                      \
   simple-scale.xml                \
+  sinus.xml                       \
   softglow.xml                    \
   stretch-contrast.xml            \
   supernova.xml                   \
