--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -98,6 +98,7 @@ operations/common/remap.c
 operations/common/ripple.c
 operations/common/save.c
 operations/common/shift.c
+operations/common/sinus.c
 operations/common/snn-mean.c
 operations/common/softglow.c
 operations/common/stress.c
