workshop: add video4linux2 frame source
This should probably fully replace the v4l op, which relies on outdated linux
kernel headers.

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -221,3 +221,4 @@ operations/workshop/kuwahara.c
 operations/workshop/mandelbrot.c
 operations/workshop/rawbayer-load.c
 operations/workshop/snn-percentile.c
+operations/workshop/v4l2.c
