operations: add gegl:engrave

--- a/operations/common/Makefile.am
+++ b/operations/common/Makefile.am
@@ -42,6 +42,7 @@ op_LTLIBRARIES = \
 	edge-laplace.la \
 	edge-sobel.la \
 	emboss.la \
+	engrave.la \
 	exp-combine.la \
 	exposure.la \
 	fattal02.la \
