tests: Add composition for loading JPEG from data: URI

--- a/tests/compositions/Makefile.am
+++ b/tests/compositions/Makefile.am
@@ -68,6 +68,7 @@ NO_OPENCL_TESTS = \
   stretch-contrast-hsv.xml      \
   pnm-raw-load.xml              \
   pnm-ascii-load.xml            \
+  jpg-load-datauri.xml          \
   tile.xml
 
 # Conditional tests
