operations: Add scale-size-keepaspect
The original scale-size requires to pass both height and width.
scale-size-keepaspect will calculate one from the other, preserving
the original aspect ratio if only one is specified.
If no dimensions are specified, keeps original dimensions.

--- a/operations/transform/Makefile.am
+++ b/operations/transform/Makefile.am
@@ -15,6 +15,7 @@ transformops_la_SOURCES = \
 	rotate.c	\
 	scale-ratio.c \
 	scale-size.c \
+	scale-size-keepaspect.c \
 	shear.c		\
 	transform.c	\
 	translate.c	\
