tests: Add reference test for scale-size-keepaspect

--- a/tests/compositions/Makefile.am
+++ b/tests/compositions/Makefile.am
@@ -49,6 +49,7 @@ TESTS = \
   rgb-params.xml                  \
   rotate.xml                      \
   simple-scale.xml                \
+  scale-size-keepaspect.xml       \
   sinus.xml                       \
   softglow.xml                    \
   stretch-contrast.xml            \
