--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -31,6 +31,7 @@ operations/common/copy-buffer.c
 operations/common/cubism.c
 operations/common/deinterlace.c
 operations/common/difference-of-gaussians.c
+operations/common/diffraction-patterns.c
 operations/common/display.c
 operations/common/distance-transform.c
 operations/common/dropshadow.c
