operation/json: Actually install file used in test
Seems to be require for distcheck to pass

--- a/configure.ac
+++ b/configure.ac
@@ -1204,6 +1204,7 @@ libs/poly2tri-c/poly2tri-c/refine/Makefile
 seamless-clone/Makefile
 operations/Makefile
 operations/core/Makefile
+operations/json/Makefile
 operations/common/Makefile
 operations/common/perlin/Makefile
 operations/seamless-clone/Makefile
