build: fix build when srcdir != builddir

--- a/operations/Makefile-common.am
+++ b/operations/Makefile-common.am
@@ -32,5 +32,5 @@ AM_LDFLAGS = -avoid-version -export-dynamic -module $(no_undefined)
 
 ext_dir = $(libdir)/gegl-@GEGL_API_VERSION@
 
-%.c.h: %.c $(top_builddir)/tools/csourcetostring.py
-	$(PYTHON) $(top_builddir)/tools/csourcetostring.py $<
+%.c.h: %.c $(top_srcdir)/tools/csourcetostring.py
+	$(PYTHON) $(top_srcdir)/tools/csourcetostring.py $<
