Add Instagram filters
Currently 1977, Brannan, Gotham and Nashville are implemented. The
filters are provided by a meta-operation called gegl:insta-filter
which takes an enum specifying which one to apply. The hidden
gegl:insta-curve operation has the preset curves in terms of look-up
tables.

Based on:
http://matthewruddy.github.io/jQuery-filter.me/
https://github.com/jonnor/imgflo-server/tree/master/graphs

https://bugzilla.gnome.org/show_bug.cgi?id=743681

--- a/operations/workshop/Makefile.am
+++ b/operations/workshop/Makefile.am
@@ -19,6 +19,8 @@ op_LTLIBRARIES =    \
 	ditto.la \
 	hstack.la \
 	ink-simulator.la \
+	insta-curve.la \
+	insta-filter.la \
 	kuwahara.la \
 	mandelbrot.la \
 	median-blur.la \
