operations/workshop/external: distribute generated header files

--- a/operations/workshop/external/Makefile.am
+++ b/operations/workshop/external/Makefile.am
@@ -39,6 +39,7 @@ v4l2_la_LIBADD = $(op_libs) $(V4L2_LIBS)
 v4l2_la_CFLAGS = $(AM_CFLAGS) $(V4L2_CFLAGS)
 endif
 
+EXTRA_DIST = $(wildcard $(srcdir)/*.h)
 BUILT_SOURCES = $(subst .c,.c.h,$(wildcard $(srcdir)/*.c))
 
 opdir = $(libdir)/gegl-@GEGL_API_VERSION@
