--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -32,6 +32,7 @@ operations/common/cubism.c
 operations/common/deinterlace.c
 operations/common/difference-of-gaussians.c
 operations/common/diffraction-patterns.c
+operations/common/displace.c
 operations/common/display.c
 operations/common/distance-transform.c
 operations/common/dropshadow.c
