--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -35,6 +35,7 @@ operations/common/diffraction-patterns.c
 operations/common/display.c
 operations/common/distance-transform.c
 operations/common/dropshadow.c
+operations/common/edge.c
 operations/common/edge-laplace.c
 operations/common/edge-sobel.c
 operations/common/emboss.c
