--- a/tests/compositions/Makefile.am
+++ b/tests/compositions/Makefile.am
@@ -27,6 +27,7 @@ TESTS = \
   composite-transform.xml         \
   contrast-curve.xml              \
   diffraction-patterns.xml        \
+  edge.xml                        \
   edge-laplace.xml                \
   edge-sobel.xml                  \
   engrave.xml                     \
