Link with libm where needed
https://bugzilla.gnome.org/show_bug.cgi?id=746103

--- a/bin/Makefile.am
+++ b/bin/Makefile.am
@@ -27,7 +27,7 @@ AM_CFLAGS = \
 
 AM_LDFLAGS =  \
 	$(no_undefined) ../gegl/libgegl-$(GEGL_API_VERSION).la \
-	$(DEP_LIBS) $(BABL_LIBS) $(PNG_LIBS) $(LIBSPIRO)
+	$(DEP_LIBS) $(BABL_LIBS) $(PNG_LIBS) $(LIBSPIRO) $(MATH_LIB)
 
 bin_PROGRAMS = gegl gegl-tester
 
