--- a/seamless-clone/gegl-sc.pc.in
+++ b/seamless-clone/gegl-sc.pc.in
@@ -6,6 +6,6 @@ includedir=@includedir@/sc
 Name: GEGL Seamless Cloning
 Description: Seamless Cloning Library Based on GEGL
 Version: @GEGL_REAL_VERSION@
-Requires: @GLIB_PACKAGES@ babl poly2tri-c @PACKAGE_NAME@
+Requires: @GLIB_PACKAGES@ babl @P2TC_PACKAGES@ @PACKAGE_NAME@-@GEGL_API_VERSION@
 Libs: -L${libdir} -l@PACKAGE_NAME@-sc-@GEGL_API_VERSION@
 Cflags: -I${includedir}/@PACKAGE_NAME@-@GEGL_API_VERSION@/sc
