--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -122,6 +122,7 @@ operations/common/texturize-canvas.c
 operations/common/threshold.c
 operations/common/tile.c
 operations/common/tile-glass.c
+operations/common/tile-paper.c
 operations/common/tile-seamless.c
 operations/common/unsharp-mask.c
 operations/common/value-invert.c
