operations/workshop: add gegl:median-blur

--- a/operations/workshop/Makefile.am
+++ b/operations/workshop/Makefile.am
@@ -21,6 +21,7 @@ op_LTLIBRARIES =    \
 	ink-simulator.la \
 	kuwahara.la \
 	mandelbrot.la \
+	median-blur.la \
 	rawbayer-load.la \
 	unpremul.la \
 	gradient-map.la
