--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -227,4 +227,5 @@ operations/workshop/hstack.c
 operations/workshop/ink-simulator.c
 operations/workshop/kuwahara.c
 operations/workshop/mandelbrot.c
+operations/workshop/median-blur.c
 operations/workshop/rawbayer-load.c
