operations/workshop: add gegl:component-extract

--- a/operations/workshop/Makefile.am
+++ b/operations/workshop/Makefile.am
@@ -13,6 +13,7 @@ LIBS = $(op_libs)
 opdir = $(ext_dir)
 op_LTLIBRARIES =    \
 	buffer-cache.la \
+	component-extract.la \
 	color-warp.la \
 	demosaic-bimedian.la \
 	demosaic-simple.la \
