--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -207,6 +207,7 @@ operations/transform/transform.c
 operations/transform/transform-core.c
 operations/transform/translate.c
 operations/workshop/buffer-cache.c
+operations/workshop/component-extract.c
 operations/workshop/color-warp.c
 operations/workshop/demosaic-bimedian.c
 operations/workshop/demosaic-simple.c
