Bug 754204 - Port of Maze plug-in from GIMP to GEGL
Add maze operation.

--- a/operations/common/Makefile.am
+++ b/operations/common/Makefile.am
@@ -78,6 +78,7 @@ op_LTLIBRARIES = \
 	map-absolute.la \
 	map-relative.la \
 	matting-global.la \
+	maze.la \
 	mblur.la \
 	mirrors.la \
 	mono-mixer.la \
