--- a/gegl-uninstalled.pc.in
+++ b/gegl-uninstalled.pc.in
@@ -2,5 +2,5 @@ Name: Gegl Uninstalled
 Description: Gegl Library, Not Installed
 Version: @VERSION@
 Requires: @GLIB_PACKAGES@
-Libs: ${pc_top_builddir}/${pcfiledir}/gegl/libgegl.la
+Libs: ${pc_top_builddir}/${pcfiledir}/gegl/libgegl.la @MATH_LIB@
 Cflags: -I${pc_top_builddir}/${pcfiledir}/@srcdir@
