Add rotate-on-center operation
Rotate a given buffer, translating to its center first. After
rotation, calculate the amount needed to keep the produced extent
on the positive quadrant (always having the origin at its top-left
corner). Then translate that amount. Everything is done with
an unique affine matrix.

Because always translate to center, both origin-x and origin-y
parameters are ignored. Their descriptions are changed to inform
about that.

Composition test includes a crop step to make it sure we have
origin at top-left.

--- a/operations/transform/Makefile.am
+++ b/operations/transform/Makefile.am
@@ -13,6 +13,7 @@ transformops_la_SOURCES = \
 	module.h	\
 	reflect.c	\
 	rotate.c	\
+	rotate-on-center.c      \
 	scale-ratio.c \
 	scale-size.c \
 	scale-size-keepaspect.c \
