add GeglAudio - for carrying audio of a video frame
For now limited to holding 4000 samples of stereo floating point audio. Should
be extended to handle up to 6 channels.

--- a/gegl/property-types/Makefile.am
+++ b/gegl/property-types/Makefile.am
@@ -20,11 +20,13 @@ AM_CFLAGS = $(DEP_CFLAGS) $(BABL_CFLAGS)
 noinst_LTLIBRARIES = libpropertytypes.la
 
 libpropertytypes_la_SOURCES = \
+	gegl-audio.c \
 	gegl-color.c \
 	gegl-curve.c \
 	gegl-path.c \
 	gegl-paramspecs.c \
 	\
+	gegl-audio.h		\
 	gegl-color.h		\
 	gegl-curve.h		\
 	gegl-path.h		\
