--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -201,6 +201,7 @@ operations/seamless-clone/seamless-clone.c
 operations/seamless-clone/seamless-clone-compose.c
 operations/transform/reflect.c
 operations/transform/rotate.c
+operations/transform/rotate-on-center.c
 operations/transform/scale-ratio.c
 operations/transform/scale-size.c
 operations/transform/scale-size-keepaspect.c
